Spacing Issue with date

--- a/covid19sims/template.css
+++ b/covid19sims/template.css
@@ -106,7 +106,6 @@ header ul.horizontal_nav li a:hover {
 div#last-updated {
   width:100%;
   background-color: #bbb;
-  padding: 0 1rem 0 1rem;
   text-align:right;
   font-weight:bold;
 }
